<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@+id/lite_media_title_layout" style="@style/MediaControllerTopBar">
        <ImageView android:id="@+id/lite_media_title_back" android:background="@drawable/bg_player_btn" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/details_icon_back" />
        <TextView android:id="@+id/lite_media_title_text" android:layout_weight="1.0" style="@style/MediaControllerTopTitleText" />
        <TextView android:textSize="@dimen/text_size_medium" android:textColor="@color/player_text_color" android:gravity="center" android:id="@+id/tv_lite_media_projection" android:background="@drawable/bg_player_btn" android:layout_width="58.0dip" android:layout_height="fill_parent" android:text="@string/projection" />
        <TextView android:textSize="@dimen/text_size_medium" android:textColor="@color/player_text_color" android:gravity="center" android:id="@+id/tv_lite_media_share" android:background="@drawable/bg_player_btn" android:layout_width="58.0dip" android:layout_height="fill_parent" android:text="@string/share" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/lite_media_progress_layout" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ProgressBar android:layout_gravity="center_horizontal" style="@style/SohuProgressSmall" />
        <TextView android:textSize="14.0sp" android:textColor="@color/sohu_gray1" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/lite_media_progress_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/loading" />
    </LinearLayout>
    <ImageView android:id="@+id/retry_play_icon" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/details_icon_windowplay" android:layout_centerInParent="true" android:contentDescription="@string/app_name" />
    <RelativeLayout android:gravity="center_horizontal" android:id="@+id/lite_media_play_control_layout" android:background="@color/player_vip_color" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_alignParentBottom="true">
        <ImageView android:id="@+id/lite_media_play_pause_img" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/player_icon_play" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/app_name" />
        <SeekBar android:id="@+id/lite_media_seekbar" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxHeight="1.0dip" android:max="100" android:progressDrawable="@drawable/seekbar_style_drawable" android:minHeight="1.0dip" android:thumb="@drawable/seekbar_thumb_style" android:thumbOffset="7.0dip" android:layout_toLeftOf="@+id/lite_media_fullscreen_imgview" android:layout_toRightOf="@+id/lite_media_play_pause_img" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/text_size_more" android:textColor="@color/sohu_gray2" android:id="@+id/lite_media_total_time_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:layout_alignRight="@+id/lite_media_seekbar" android:layout_alignParentBottom="true" />
        <TextView android:textSize="@dimen/text_size_more" android:textColor="@color/white" android:id="@+id/lite_media_current_time_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:layout_toLeftOf="@+id/lite_media_total_time_text" android:layout_alignParentBottom="true" />
        <ImageView android:id="@+id/lite_media_fullscreen_imgview" android:padding="10.0dip" android:clickable="true" android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@drawable/bg_details_icon_fullscreen" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:contentDescription="@string/app_name" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/vip_tips_container" android:background="@drawable/details_bg_vip" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginBottom="3.0dip" android:layout_above="@+id/lite_media_play_control_layout" android:layout_centerHorizontal="true">
        <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/sohu_gray3" android:id="@+id/vip_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/red" android:id="@+id/open_vip_link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/load_vip_to_play" android:layout_toRightOf="@+id/vip_tips" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/play_limited_tips_container" android:background="@drawable/details_bg_vip_normal" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginBottom="20.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/sohu_gray3" android:id="@+id/play_limited_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" />
    </RelativeLayout>
</RelativeLayout>