<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
     >
    
    <RelativeLayout 
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <RelativeLayout 
            android:id="@+id/rl_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menu_list_top_height"
            >
            
            <ImageView 
                android:id="@+id/iv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_message"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/menu_message_margin_left"
                android:visibility="gone"
                />
            
            <TextView
	            android:id="@+id/tv_msg"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/iv_message"
	            android:layout_centerVertical="true"
	            android:layout_marginLeft="@dimen/menu_message_text_margin_left"
	            android:textColor="#ffffff"
	            android:text="消息"
	            android:textSize="15sp"
	            android:visibility="gone"
	            />
            
        </RelativeLayout>
        
        <!-- <RelativeLayout 
            android:id="@+id/rl_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_head_margin_left"
            android:layout_marginTop="@dimen/menu_head_margin_top"
            android:background="@drawable/user_head"
            > -->
            
            <ImageView 
	            android:id="@+id/iv_head"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/menu_head_margin_left"
            	android:layout_marginTop="@dimen/menu_head_margin_top"
	            android:background="@drawable/user_head_default"/>
            
        <!-- </RelativeLayout> -->
        
        <RelativeLayout 
            android:id="@+id/rl_user_info"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/menu_list_top_height"
            android:layout_toRightOf="@id/iv_head"
            android:layout_marginLeft="@dimen/menu_user_info_margin_left"
            >
            
            <TextView 
	            android:id="@+id/tv_welcome"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/welcome_text_text_size"
	            android:textColor="@color/menu_list_text_color"
	            android:singleLine="true"
	            android:includeFontPadding="false"
	            android:layout_marginTop="35.5dp"
	            android:textStyle="bold"
	            android:text="@string/welcome"/>
	        <TextView 
	            android:id="@+id/tv_userid"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/tv_welcome"
	            android:includeFontPadding="false"
	            android:layout_marginTop="@dimen/userid_text_margin_top"
	            android:textColor="@color/menu_list_text_color"
	            android:text="ID:Y32198"
	            android:textSize="@dimen/userid_text_size"
	            android:visibility="gone"
	            />
        </RelativeLayout>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/ll_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/menu_setting_margin_left"
        android:layout_marginBottom="@dimen/menu_setting_margin_bottom"
        >
        <ImageView 
	        android:id="@+id/iv_setting"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/btn_setting"
	        />
    </RelativeLayout>
    
	<ScrollView 
	    android:id="@+id/sv_index"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/rl_top"
	    android:layout_above="@id/ll_setting"
	    android:layout_marginTop="29.5dp"
	    android:layout_marginBottom="10dp"
	    >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	        
	        <View 
	            android:id="@+id/view_line_0"
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="#ffffff"
	            />
	        <RelativeLayout
	            android:id="@+id/rl_home_page"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            >
	
	            <ImageView
	                android:id="@+id/iv_home_page"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_marginLeft="@dimen/menu_list_margin_left"
	                android:src="@drawable/btn_home" />
	
	            <TextView
	                android:id="@+id/tv_home_page"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_toRightOf="@id/iv_home_page"
	                android:text="@string/homepage"
	                android:layout_marginLeft="@dimen/menu_list_text_margin_left"
	                android:textStyle="italic"
	                android:textSize="@dimen/menu_list_text_size"
	                android:textColor="@color/menu_list_text_color"
	                 />
	        </RelativeLayout>
	        <View 
	            android:id="@+id/view_line_1"
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="#ffffff"
	            />
	
	        <RelativeLayout
	            android:id="@+id/rl_rail_service"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            >
	
	            <ImageView
	                android:id="@+id/iv_rail_service"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="@dimen/menu_list_margin_left"
	                android:layout_centerVertical="true"
	                android:src="@drawable/btn_lcfw" />
	
	            <TextView
	                android:id="@+id/tv_rail_service"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_toRightOf="@id/iv_rail_service"
	                android:layout_marginLeft="@dimen/menu_list_text_margin_left"
	                android:textSize="@dimen/menu_list_text_size"
	                android:textStyle="italic"
	                android:text="@string/railwayservice"
	                android:textColor="@color/menu_list_text_color"
	                 />
	        </RelativeLayout>
	        <View 
	            android:id="@+id/view_line_2"
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="#ffffff"
	            />
	        
	        <RelativeLayout
	            android:id="@+id/rl_alliance"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            >
	
	            <ImageView
	                android:id="@+id/iv_alliance"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_marginLeft="@dimen/menu_list_margin_left"
	                android:src="@drawable/btn_tllm" />
	
	            <TextView
	                android:id="@+id/tv_alliance"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_marginLeft="@dimen/menu_list_text_margin_left"
	                android:textSize="@dimen/menu_list_text_size"
	                android:layout_toRightOf="@id/iv_alliance"
	                android:paddingRight="10dp"
	                android:textStyle="italic"
	                android:text="铁旅联盟  "
	                android:textColor="@color/menu_list_text_color"
	                 />
	        </RelativeLayout>
	        <View 
	            android:id="@+id/view_line_3"
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="#ffffff"
	            />
	
	        <RelativeLayout
	            android:id="@+id/rl_media_amusement"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            >
	
	            <ImageView
	                android:id="@+id/iv_media_amusement"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_marginLeft="@dimen/menu_list_margin_left"
	                android:src="@drawable/btn_yyyl" />
	
	            <TextView
	                android:id="@+id/tv_media_amusement"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_toRightOf="@id/iv_media_amusement"
	                android:text="@string/mediaamusement"
	                android:layout_marginLeft="@dimen/menu_list_text_margin_left"
	                android:textStyle="italic"
	                android:textSize="@dimen/menu_list_text_size"
	                android:textColor="@color/menu_list_text_color"
	                 />
	        </RelativeLayout>
	        <View 
	            android:id="@+id/view_line_4"
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="#ffffff"
	            />
	        
	
	        <RelativeLayout
	            android:id="@+id/rl_city_life"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            android:visibility="gone"
	            >
	
	            <ImageView
	                android:id="@+id/iv_city_life"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_marginLeft="@dimen/menu_list_margin_left"
	                android:src="@drawable/btn_cssh" />
	
	            <TextView
	                android:id="@+id/tv_city_life"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_toRightOf="@id/iv_city_life"
	                android:text="@string/citylife"
	                android:layout_marginLeft="@dimen/menu_list_text_margin_left"
	                android:textStyle="italic"
	                android:textSize="@dimen/menu_list_text_size"
	                android:textColor="@color/menu_list_text_color"
	                 />
	        </RelativeLayout>
	
	        <RelativeLayout
	            android:id="@+id/rl_game_world"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	             >
	
	            <ImageView
	                android:id="@+id/iv_game_world"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_marginLeft="@dimen/menu_list_margin_left"
	                android:src="@drawable/btn_yxsj" />
	
	            <TextView
	                android:id="@+id/tv_game_world"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_toRightOf="@id/iv_game_world"
	                android:text="游戏世界 "
	                android:textColor="@color/menu_list_text_color"
	                android:textStyle="italic"
	                android:layout_marginLeft="@dimen/menu_list_text_margin_left"
	                android:textSize="@dimen/menu_list_text_size"
	                 />
	        </RelativeLayout>
	        
	        <View 
	            android:id="@+id/view_line_5"
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="#ffffff"
	            />
	
	        
	        
	        <RelativeLayout
	            android:id="@+id/rl_city_introduction"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            >
	
	            <ImageView
	                android:id="@+id/iv_city_introduction"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_marginLeft="@dimen/menu_list_margin_left"
	                android:src="@drawable/btn_csfc" />
	
	            <TextView
	                android:id="@+id/tv_city_introduction"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_marginLeft="@dimen/menu_list_text_margin_left"
	                android:layout_toRightOf="@id/iv_city_introduction"
	                android:text="@string/cityintroduction"
	                android:textStyle="italic"
	                android:textColor="@color/menu_list_text_color"
	                android:textSize="@dimen/menu_list_text_size" />
	        </RelativeLayout>
	        
	        <View 
	            android:id="@+id/view_line_6"
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="#ffffff"
	            />
	    </LinearLayout>
	    
	</ScrollView>
    
    
    
    

</RelativeLayout>